syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.jinloes.grpc.proto";
option java_outer_classname = "GreetingProto";

package greeting;

service GreetingService {
  rpc SayHello (HelloRequest) returns (HelloResponse);
  rpc SayHelloServerStreaming (HelloRequest) returns (stream HelloResponse);
  rpc SayHelloClientStreaming (stream HelloRequest) returns (HelloResponse);
  rpc SayHelloBidirectional (stream HelloRequest) returns (stream HelloResponse);
}

message HelloRequest {
  string name = 1;
}

message HelloResponse {
  string message = 1;
}